--- a/aws/projects/Project-101-kittens-carousel-static-website-ec2/cfn-teamplate.yaml
+++ b/aws/projects/Project-101-kittens-carousel-static-website-ec2/cfn-teamplate.yaml
@@ -21,25 +21,25 @@ Resources:
     Properties:
       ImageId: ami-0022f774911c1d690
       InstanceType: t2.micro
-      KeyName: serdar
+      KeyName: seninben
       SecurityGroupIds:
-        -  !Ref WebServerSecurityGroup
+        - !Ref WebServerSecurityGroup
       Tags:
         - Key: Name
-          Value: !Sub Web Server of ${AWS::StackName}
+          Value: !Sub Web Server of ${AWS::StackName} Stack
       UserData: 
         Fn::Base64: 
-          |
+          !Sub |
             #! /bin/bash
             yum update -y
             yum install httpd -y
+            FOLDER="https://raw.githubusercontent.com/Herr-Aksoy/my-projects/main/aws/projects/Project-101-kittens-carousel-static-website-ec2/static-web"
             cd /var/www/html
-            FOLDER="https://raw.githubusercontent.com/serdarcw/my-repository/master/Project-101-kittens-carousel-static-website-ec2/static-web/"
-            wget ${FOLDER}index.html
-            wget ${FOLDER}cat0.jpg
-            wget ${FOLDER}cat1.jpg
-            wget ${FOLDER}cat2.jpg
-            wget ${FOLDER}cat3.png
+            wget $FOLDER/index.html
+            wget $FOLDER/cat0.jpg
+            wget $FOLDER/cat1.jpg
+            wget $FOLDER/cat2.jpg
+            wget $FOLDER/cat3.png
             systemctl start httpd
             systemctl enable httpd
 
